tcw3/designer/tests/bad/objinit_field_wrong_field_ty.tcwdl
pub comp crate::Comp1 {
    pub event evt();
}
pub comp crate::Comp2 {
    const comp1: crate::Comp1 = crate::Comp1 {
        // `Comp1::evt` is actually `event`
        const evt = || 42;
    };
}
